--- a/EDA-Gun_Violence_in_US.Rmd
+++ b/EDA-Gun_Violence_in_US.Rmd
@@ -1,6 +1,8 @@
 ---
 title: 'Gun Violence in the US: Exploratory Data Analysis'
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 Load libraries:
@@ -211,7 +213,7 @@ for (i in 1:nrow(casByCity)) {
       theCity <- casByCity$city_or_county[i]
       theState <- casByCity$state[i]
       theYear <- casByCity$year[i]
-      ind <- which(citypop$city == theCity)
+      ind <- which(citypop$city == theCity & citypop$state == theState)
       
       if (length(ind) > 0 && 
           theCity == citypop$city[ind] && 
@@ -248,8 +250,8 @@ meanCBC <- ungroup(casByCity) %>%
              i.per.capita100K = n.injured/population*100000)
 
 # Remove NA values and then compute the mean on the remaining values; sort by mean
-meanCBC <- group_by(meanCBC, city_or_county, state, abb) %>% 
-      filter(!is.na(population)) %>% 
+meanCBC <- filter(meanCBC, !is.na(population)) %>%
+      group_by(city_or_county, state, abb) %>% 
       summarize(meanCasRate = mean(cas.per.capita100K), 
                 meanKRate = mean(k.per.capita100K), 
                 meanIRate = mean(i.per.capita100K)) %>% 
@@ -264,15 +266,17 @@ Let's plot the top 50:
 top50 <- meanCBC[1:50,]
 
 top50 <- arrange(top50, meanCasRate)
-top50 <- mutate(top50, meanIRate = -meanIRate)
-top50melt2 <- melt(top50[,c("city_or_county", "abb", "meanKRate", "meanIRate")], 
-                   id.vars = c("city_or_county", "abb"))
+top50 <- mutate(top50, meanIRate = -meanIRate, 
+                city = paste(city_or_county, sep = ", ", abb))
+top50melt2 <- melt(top50[,c("city", "meanKRate", "meanIRate", "meanCasRate")],
+                   id.vars = c("city", "meanCasRate"))
 
 ggplot(data = top50melt2) + 
-      geom_col(aes(x = city_or_county, y = value, fill = variable)) +
-      scale_y_continuous(limits = c(-150,150), 
-                         breaks = c(150, 100, 50, 0, -50, -100, -150), 
-                         labels = c("150", "100", "50", "0", "50", "100", "150")) + 
+      geom_col(aes(x = reorder(city, meanCasRate), y = value, 
+                   fill = variable)) +
+      scale_y_continuous(limits = c(-200,150), 
+                         breaks = c(200, 150, 100, 50, 0, -50, -100, -150), 
+                         labels = c("200", "150", "100", "50", "0", "50", "100", "150")) + 
       theme(axis.text.x = element_text(hjust = .95, size = 12)) + 
       theme(axis.text.y = element_text(vjust = 0.5, size = 10)) +
       theme(axis.title.y = element_text(size = 14)) + 
@@ -284,21 +288,18 @@ ggplot(data = top50melt2) +
                           guide = guide_legend(reverse = TRUE)) +
       labs(x = NULL, y = NULL) +
       labs(title = "Mean Injury/Fatality Rate per 100,000 People by City (2014-2017 where available)") + 
-      scale_x_discrete(limits = top50$city_or_county, 
-                       labels = paste(top50$city_or_county, 
-                                      sep = ", ", top50$abb)) +
       coord_flip()
 ```
 
 According to the data, the top 5 cities with the most gun violence are:
 
-1. Trenton, NJ
-2. New Orleans, LA
-3. Gary, IN
-4. Baltimore, MD
-5. Flint, MI
+1. Wilmington, DE
+2. Trenton, NJ
+3. New Orleans, LA
+4. Gary, IN
+5. Baltimore, MD
 
-Chicago comes in at 7th, even though Illinois was the second highest per capita state.
+Chicago comes in at 8th, even though Illinois was the second highest per capita state.
 
 ### Effect of Gun Legislation on Gun Casualty Rates
 One topic that is furiously being debated across the nation is whether or not to pass more/stricter gun laws on top of the ones that already exist. What is the effect of gun laws on casualty rate? Let's analyze this both at the state level and city level.
@@ -415,7 +416,7 @@ p.allcities <- ggplot(data = meanCBClaws, aes(x = `Number of Laws`,
 ggplotly(p.allcities, tooltip = c("text"))
 ```
 
-There are 699 cities displayed here (there are actually a lot more cities throughout the US where gun violence occurred, but the population data were only available for cities over 50,000 people). It is clear that in a given state, there is a wide distribution in the casualty rates. You can hover over each point to see the data it represents.
+There are 739 cities displayed here (there are actually a lot more cities throughout the US where gun violence occurred, but the population data were only available for cities over 50,000 people). It is clear that in a given state, there is a wide distribution in the casualty rates. You can hover over each point to see the data it represents.
 
 Unsurprisingly, it is clear that individual states experience different levels of gun violence in different cities. Let's look at a box plot in order to see the distribution in city casualty rates in each state:
 
@@ -444,16 +445,16 @@ names(meanCBClaws) <- oldnames
 
 # Take the top 49 cities and change the injury rate to negative for easy plotting
 top49 <- meanCBClaws[1:49,] %>% 
-      arrange(meanCasRate) %>% 
-      mutate(meanIRate = -meanIRate)
+      arrange(meanCasRate) %>%
+      mutate(meanIRate = -meanIRate, 
+             city = paste(city_or_county, sep = ", ", abb))
 
-top49melt <- melt(top49[,c("city_or_county", "abb", "meanKRate", "meanIRate", 
-                           "numlaws")], 
-                  id.vars = c("city_or_county", "abb", "numlaws"))
+top49melt <- melt(top49[,c("city", "meanCasRate", "meanKRate", "meanIRate", "numlaws")], id.vars = c("city", "meanCasRate", "numlaws"))
 
 kiplot3 <- ggplot(data = top49melt) + 
-      geom_col(aes(x = city_or_county, y = value, fill = numlaws)) +
-      scale_y_continuous(breaks = c(50, 0, -50, -100, -150), labels = c("50", "0", "50", "100", "150")) + 
+      geom_col(aes(x = reorder(city, meanCasRate), y = value, 
+                   fill = numlaws)) +
+      scale_y_continuous(breaks = c(150, 100, 50, 0, -50, -100, -150, -200), labels = c("150", "100", "50", "0", "50", "100", "150", "200")) + 
       theme(axis.text.x  = element_text(hjust = .95, size = 12)) + 
       theme(axis.text.y = element_text(vjust = 0.5, size = 10)) +
       theme(axis.title.y = element_text(size = 14)) + 
@@ -461,9 +462,6 @@ kiplot3 <- ggplot(data = top49melt) +
       labs(x = NULL, y = NULL) +
       labs(title = "Mean Injury/Fatality Rate per 100,000 People by City (2014-2017 
            where available)") + 
-      scale_x_discrete(limits = top49$city_or_county, 
-                       labels = paste(top49$city_or_county, sep = ", ", 
-                                      top49$abb)) +
       geom_hline(yintercept = 0, lwd = 2, color = "black") +
       coord_flip()
 
